--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
     padding-top: 20px;
 }
 
+.pto > div {
+    padding-top: 20px;
+}
+
 .vacation {
     padding-top: 20px;
 }
@@ -62,7 +66,19 @@ body {
 }
 
 .button:hover {
-    background-color: #959292;
-    color: #4d3a3a;
+    background-color: #615f5f;
+    color: #d8a3a3;
     border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 600px) {
+    .pto, .buttons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .button {
+        margin-bottom: 10px;
+    }
 }
